public/css/ed.css
/* ... */
a strong {
  color: inherit;
}

/* `:focus` is linked to `:hover` for basic accessibility */
a:hover,
a:focus {
  text-decoration: underline;
}

/* Headings */

h1, h2, h3, h4, h5, h6 {
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  margin-bottom: .5rem;
  font-weight: 400; 
  font-size: 1.5rem;
  color: #404040;
  letter-spacing: -.025rem;
  line-height: 1.25;
  text-rendering: optimizeLegibility;
}

h1 {
	font-size: 1.4rem;
}

h1.post-title {
	font-size: 1.4rem;
}

h2 {
	margin-top: 1rem;
	font-size: 1.2rem;
}

h3, h4, h5 {
	font-size: 1rem;
}

h3 {
  margin-top: 1.5rem;

}

h4, h5, h6 {
  margin-top: 1rem;
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

strong {
  color: #303030;
}


/* Lists */
ul {
	list-style: circle;
}

ul, ol, dl {
  margin-top: 0;
  margin-bottom: 1rem;
}

dt {
  font-weight: bold;
}
dd {
  margin-bottom: .5rem;
}

/* Misc */

hr {
  margin-top: 60px;
  position: relative;
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
}

abbr {
  font-size: 85%;
  font-weight: bold;
  color: #555;
  text-transform: uppercase;
}
abbr[title] {
  cursor: help;
  border-bottom: 1px dotted #e5e5e5;
}

/* Search Highlihting */

mark {
    color: white;
    background-color: #841212;
}

/* Quotes */

blockquote {
	padding: 0rem 1.5rem 0rem 2rem;
	margin: 0 0 20px 0; 
  	color: #454545;
	border-left: none;
	font-style: italic;
}

blockquote p:last-child {
  margin-bottom: 0;
}

@media (min-width: 30em) {
  blockquote {
    padding-right: 5rem;
    padding-left: 1.25rem;
  }
}



/* Images */

img {
  display: block;
  max-width: 100%;
  margin: 0 0 1rem;
  border-radius: 5px;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid #e5e5e5;
  border-collapse: collapse;
}
td,
th {
  padding: .25rem .5rem;
  border: 1px solid #e5e5e5;
}
tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: #f9f9f9;
}

/*
 * Custom type
 *
 * Extend paragraphs with `.lead` for larger introductory text.
 */

.lead {
  font-size: 1.25rem;
  font-weight: 300;
}


/*
 * Messages
 *
 * Show alert messages to users. You may add it to single elements like a `<p>`,
 * or to a parent if there are multiple elements to show.
 */

.message {
  margin-bottom: 1rem;
  padding: 1rem;
  color: #717171;
  background-color: #f9f9f9;
}

/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
 */

.masthead {
	margin-bottom: 3rem;
	text-align: center;
	padding-top: .8rem;
	padding-bottom: .8rem;
  border-bottom: 1px solid #eee;
}

.masthead-title {
  margin-top: 0;
  margin-bottom: 0;
  color: #505050;
  line-height: 1.5rem;
}
.masthead-title a {
	color: #841212;
}

.masthead-title small {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  font-size: 1rem;
  font-weight: 400;
  color: #c0c0c0;
  letter-spacing: 0;
}

h3.masthead-title {
	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
	font-size: 1.8rem;
	margin-top: 2px;
}


@media (max-width: 48em) {
  .masthead-title {
    text-align: center;
  }
  .masthead-title small {
    display: none;
  }
}

/* Page and Posts */

.page {
  margin-bottom: 4em;
}

.page-title {
  color: #404040;
  margin-top: 0;
}


/*
 * Sidebar
 *
 * The sidebar is the drawer, the item we are toggling with our handy hamburger
 * button in the corner of the page.
 *
 * This particular sidebar implementation was inspired by Chris Coyier's
 * "Offcanvas Menu with CSS Target" article, and the checkbox variation from the
 * comments by a reader. It modifies both implementations to continue using the
 * checkbox (no change in URL means no polluted browser history), but this uses
 * `position` for the menu to avoid some potential content reflow issues.
 *
 * Source: http://css-tricks.com/off-canvas-menu-with-css-target/#comment-207504
 */

/* Style and "hide" the sidebar */
.sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: -14rem;
  width: 14rem;
  visibility: hidden;
  overflow-y: auto;
  font-family: "PT Sans", Helvetica, Arial, sans-serif;
  font-size: .875rem; /* 15px */
  color: rgba(255,255,255,.6);
  background-color: #202020;
  -webkit-transition: all .3s ease-in-out;
          transition: all .3s ease-in-out;
}
@media (min-width: 30em) {
  .sidebar {
    font-size: .75rem; /* 14px */
  }
}

/* Sidebar content */

.sidebar {
  background-color: #841212;
}

.sidebar a {
  font-weight: normal;
  color: #fff;
}
.sidebar-item {
  padding: 1rem;
}
.sidebar-item p:last-child {
  margin-bottom: 0;
}

/* Sidebar nav */
.sidebar-nav {
  border-bottom: 1px solid rgba(255,255,255,.1);
}
.sidebar-nav-item {
  display: block;
  padding: .5rem 1rem;
  border-top: 1px solid rgba(255,255,255,.1);
}

a.sidebar-nav-item-toc {
  color: rgba(255,255,255,.8);
}

.sidebar-nav-item.active,
a.sidebar-nav-item:hover,
a.sidebar-nav-item:focus {
  text-decoration: none;
  background-color: rgba(255,255,255,.1);
  border-color: transparent;
}

@media (min-width: 48em) {
  .sidebar-item {
    padding: 1.5rem;
  }
  .sidebar-nav-item {
    padding-left:  1.5rem;
    padding-right: 1.5rem;
  }
}

/* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
.sidebar-checkbox {
    display: none;
}

/* Style the `label` that we use to target the `.sidebar-checkbox` */
.sidebar-toggle {
  position: absolute;
  top:  .8rem;
  left: 1rem;
  display: block;
  padding: .25rem .75rem;
  color: #505050;
  background-color: #fff;
  border-radius: .25rem;
  cursor: pointer;
}
/* ... */

